--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
