--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
+    "file-saver": "^2.0.5",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
